--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <body>
-        <h1> Vežba 1 – SI 2020 – <76/2018></h1>
+        <h1 class="h1-style"> Vežba 1 – SI 2020 – <76/2018></h1>
         </body>
     </head>
 </html>
