--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css"/>
         <body>
         <h1 class="h1-style"> Vežba 1 – SI 2020 – <76/2018></h1>
+            
         </body>
     </head>
 </html>
